Fixes spacing in tabs area on surahs and ayahs.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -51,6 +51,9 @@ nav.mobile-navbar
   &.is-brown
     background-color: $brown
 
+  &.is-mobile
+    padding: .75rem 1.5rem
+
 .navbar.is-fixed-bottom
   box-shadow: 0 0 0 rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1)
 
